# BraTSWithUNet

./: .gitignore  README.md  main.py  pyproject.toml
datasets/: __init__.py  brats_dataset.py  oxford_iiit_pet_dataset.py  oxford_iiit_pet_dataset_binary.py
documents/: attention_u_net.md  dice_loss_and_coeffient.md  u_net_baseline.md
loaders/: __init__.py  oxfordiiitpet_loader.py
losses/: __init__.py  combined_loss.py  dice_loss.py
metrics/: __init__.py  multiclasses_segmentation_metrics.py  segmetation_metrics.py
models/: __init__.py  attention_u_net.py  res_u_net.py  trans_u_net.py  u_net.py  u_net_plus_plus.py
notebooks/: explore-brats.ipynb  explore_brats.ipynb  explore_metrics.ipynb  explore_oxford_iiit_pet.ipynb  pipline_binary_training.ipynb  training_brats_u_net_baseline.ipynb  traning_oxford_iiit_pet.ipynb
training/: __init__.py  brats_training.py  oxford_iiit_pet_training.py  training.py
