[project]
name = "unetwithbrats"
version = "0.1.0"
description = "Comparative evaluation of U-Net architectures for Glioma Segmentation on Multi-Parametric MRI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kaggle>=1.8.0",
    "matplotlib>=3.10.7",
    "nibabel>=5.3.2",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
