[project]
name = "unetwithbrats"
version = "0.1.0"
description = "Comparative evaluation of U-Net architectures for Glioma Segmentation on Multi-Parametric MRI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "kaggle>=1.8.0",
    "matplotlib>=3.10.7",
    "nibabel>=5.3.2",
    "opencv-python>=4.12.0.88",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
]
